--- a/pages/recipes-highprotein-protein-cookies.html
+++ b/pages/recipes-highprotein-protein-cookies.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Protein cookies | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,17 +65,17 @@
     <main class="mainRecipes">
         <div class="recipe__main__container">
             <div class="recipe__picture">
-                <img src="../img/quinoa-burger.png" alt="quinoa_burger">
-                <h3>low calories recipe</h3>
+                <img src="../img/protein-cookies.png" alt="protein-cookies">
+                <h3>high protein recipe</h3>
             </div>
             <div class="recipe__title">
-                <h2>Quinoa burger</h2>
-                <h4>92 calories per serving</h4>
+                <h2>Protein cookies</h2>
+                <h4>153 calories per serving</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
                 <div class="recipe__title__macros">
-                    <div class="recipe__protein"> 3,9g protein</div>
-                    <div class="recipe__carbs">13,7g carbs</div>
-                    <div class="recipe__fats">2g fats</div>
+                    <div class="recipe__protein"> 10,2g protein</div>
+                    <div class="recipe__carbs">5,7g carbs</div>
+                    <div class="recipe__fats">9,3g fats</div>
                 </div>
                 <a href="./nutritionalinfo.html">Learn more about macros</a>
             </div>
@@ -82,37 +84,46 @@
             <div class="ingredients">
                 <h4>Ingredients</h4>
                 <ul>
-                    <li>20g breadcrumbs</li>
-                    <li>2 eggs</li>
-                    <li>130g onions</li>
-                    <li>100g carrots</li>
-                    <li>310g zuccini</li>
-                    <li>200g white quinoa</li>
+                    <li>5ml vanilla essence</li>
+                    <li>1 entire egg</li>
+                    <li>1 egg white</li>
+                    <li>25g dark choco chips</li>
+                    <li>20g cornflour</li>
+                    <li>40g natural sweetner</li>
+                    <li>80g peanut butter</li>
+                    <li>1,5 scoops <span><a href="./shop-whey-protein.html">vanilla whey protein</a></span></li>
                 </ul>
-                <p>servings: 12</p>
+                <p>servings: 6</p>
             </div>
             <div class="steps">
                 <h4>Steps</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <div class="shop-ingredient">
+                    <a href="./shop-whey-protein.html">SHOP WHEY PROTEIN</a>
+                </div>
             </div>
         </div>
         <div class="recipe__secondary__container">
-            <a href="./recipes-lowcalories.html">Chech all low calories recipes</a>
+          <a href="./recipes-highprotein.html">Chech all high protein recipes</a>
         </div>
         <div class="recipe__third__container">
-          <div>
-              <h2>You may also like...</h2>
-          </div>
-          <div class="recipe__options">
-              <div class="recipe__option__1">
-                  <img src="../img/vegetable_soup.jpeg" alt="vegetable_soup">
-                  <a href="./recipes-lowcalories-vegetable_soup.html">Vegetable soup</a> 
-              </div>
-              <div class="recipe__option__2">
-                  <img src="../img/eggplant_schnitzel.png" alt="eggplant_schnitzel">
-                  <a href="./recipes-lowcalories-eggplant_schnitzel.html">Eggplant schnitzel</a> 
-              </div>
-          </div>
+            <div>
+                <h2>You may also like...</h2>
+            </div>
+            <div class="recipe__options">
+                <div class="recipe__option__1">
+                    <img src="../img/spanish-potatoe-tortilla.png" alt="spanish-tortilla">
+                    <a href="./recipes-highprotein-spanish-tortilla.html">Spanish tortilla</a>
+                </div>
+                <div class="recipe__option__2">
+                    <img src="../img/marbled-pudding.png" alt="marbled-pudding">
+                    <a href="./recipes-highprotein-marbled-pudding.html">Marbled puding</a> 
+                </div>
+            </div>
+        </div>
+
+
+        
     </main>
     <footer class="footer">
         <!--Social media icons-->
