--- a/pages/recipes-highprotein-protein-cookies.html
+++ b/pages/recipes-highprotein-protein-cookies.html
@@ -71,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Protein cookies</h2>
                 <h4>153 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>These protein cookies are soft, chewy, and made with just a few ingredients! Each cookie is over 150 grams of clean protein!</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 10,2g protein</div>
                     <div class="recipe__carbs">5,7g carbs</div>
@@ -97,7 +97,9 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Mix all the ingredents into a bowl leaving the dark choco chips to the end.</p>
+                <p><span>Pre-heat the oven to 200 C</span></p>
+                <p>Separate the dough into 6 cookies and place them on a lined baking sheet and bake for 10-12 minutes, or until the edges are just done. Remove the cookies from the oven and let them cool completely.</p>
                 <div class="shop-ingredient">
                     <a href="./shop-whey-protein.html">SHOP WHEY PROTEIN</a>
                 </div>
