--- a/pages/recipes-highprotein-protein-cookies.html
+++ b/pages/recipes-highprotein-protein-cookies.html
@@ -114,11 +114,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/spanish-potatoe-tortilla.png" alt="spanish-tortilla">
+                  <a href="./recipes-highprotein-spanish-tortilla.html"><img src="../img/spanish-potatoe-tortilla.png" alt="spanish-tortilla"></a>
                     <a href="./recipes-highprotein-spanish-tortilla.html">Spanish tortilla</a>
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/marbled-pudding.png" alt="marbled-pudding">
+                  <a href="./recipes-highprotein-marbled-pudding.html"><img src="../img/marbled-pudding.png" alt="marbled-pudding"></a> 
                     <a href="./recipes-highprotein-marbled-pudding.html">Marbled puding</a> 
                 </div>
             </div>
