--- a/pages/shop-whey-protein.html
+++ b/pages/shop-whey-protein.html
@@ -77,7 +77,7 @@
             </div>
             <div class="shop__title">
                 <h3>Whey protein</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque ex, accusamus eligendi placeat quisquam impedit?</p>
+                <p>Our protein packed whey protein formula contains 24g of protein in a single 30g serving, with less than 1g of carbohydrate or fat. Naturally sweetened with high purity stevia.</p>
                 <div class="shop__variations">
                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
@@ -136,7 +136,13 @@
         <div class="shop__primary__container">
             <div class="product__description">
                 <h5>Description</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam facere nulla tenetur quis dignissimos temporibus rem incidunt dolorum itaque voluptatum laudantium, doloribus iusto quae voluptates dicta, harum pariatur nisi doloremque.</p>
+                <p>
+                  <li>Low in fat and sugar, so you can get plenty of protein with minimal unnecessary things.</li>
+                  <li>Each serving contains an impressive 24 g of protein.</li>
+                  <li>Ideal for maintaining muscle mass and promoting growth due to the high protein content.</li>
+                  <li>Good at all times of the day, regardless of your form of training.</li>
+                  <li>Sweetened with natural stevia, so the sugar content is kept low.</li>
+                </p>
             </div>
         </div>
         <!--categories shop-->
@@ -145,13 +151,13 @@
             <section class="other__categorie__shop">
                     <div class="categorie_1">
                         <a href="./shop-shakers.html">
-                            <img src="../img/shaker-banner.webp" alt="shakers">
+                            <a href="./shop-shakers.html"><img src="../img/shaker-banner.webp" alt="shakers"></a>
                             <a href="./shop-shakers.html">Shakers</a>
                         </a>
                     </div>
                     <div class="categorie_2">
                         <a href="./shop-bmi-scales.html">
-                            <img src="../img/scales-banner.jpeg" alt="BMI-scales">
+                            <a href="./shop-bmi-scales.html"><img src="../img/scales-banner.jpeg" alt="BMI-scales"></a>
                             <a href="./shop-bmi-scales.html">BMI Scales</a>
                         </a>
                     </div>
