--- a/pages/shop-whey-protein.html
+++ b/pages/shop-whey-protein.html
@@ -81,10 +81,10 @@
                 <div class="shop__variations">
                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                        <label class="btn btn-outline-success" for="btnradio1">Vanilla</label>
+                        <label class="btn btn-outline-success" for="btnradio1">Chocolate</label>
                       
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                        <label class="btn btn-outline-success" for="btnradio2">Chocolate</label>
+                        <label class="btn btn-outline-success" for="btnradio2">Vanilla</label>
                       
                         <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
                         <label class="btn btn-outline-success" for="btnradio3">Strawberry</label>
@@ -151,16 +151,17 @@
             <section class="other__categorie__shop">
                     <div class="categorie_1">
                         <a href="./shop-shakers.html">
-                            <a href="./shop-shakers.html"><img src="../img/shaker-banner.webp" alt="shakers"></a>
-                            <a href="./shop-shakers.html">Shakers</a>
+                              <img src="../img/shaker_icon.png" alt="shakers">
+                              <h5>SHAKERS</h5>
                         </a>
                     </div>
                     <div class="categorie_2">
                         <a href="./shop-bmi-scales.html">
-                            <a href="./shop-bmi-scales.html"><img src="../img/scales-banner.jpeg" alt="BMI-scales"></a>
-                            <a href="./shop-bmi-scales.html">BMI Scales</a>
+                        <img src="../img/scale__icon.png" alt="scales">
+                        <h5>BMI SCALES</h5>
                         </a>
                     </div>
+                </a>
             </section>
         </div>
     </main>
