--- a/pages/shop-whey-protein.html
+++ b/pages/shop-whey-protein.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -93,6 +94,18 @@
                   </button>
                   </div>
               </div>
+              <div class="postalCodeContainer">
+                <select name="" id="countrySelect" class="countrySelector">
+                  <option value="denmark">Denmark</option>
+                  <option value="europe">Europe</option>
+                  <option value="world">Rest of the world</option>
+                </select>
+                <div class="postaCodeInputContainer">
+                  <input type="text" id="postalCodeInput" placeholder="Enter Postal Code" class="postalCodeInput">
+                  <button id="calculateShippingBtn" class="shippingButton">Calculate Shipping</button>
+                </div>
+              </div>
+              <p class="resultShipping">Shipping Cost: <span id="shippingCost"></span></p>
           </div>
       </div>
         <div class="basket__container">
@@ -151,6 +164,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="../js/cart.js"></script>
 </body>
 </html>
