--- a/pages/shop-whey-protein.html
+++ b/pages/shop-whey-protein.html
@@ -102,7 +102,7 @@
                 </select>
                 <div class="postaCodeInputContainer">
                   <input type="text" id="postalCodeInput" placeholder="Enter Postal Code" class="postalCodeInput">
-                  <button id="calculateShippingBtn" class="shippingButton">Calculate Shipping</button>
+                  <button id="calculateShippingBtn2" class="shippingButton">Calculate Shipping</button>
                 </div>
               </div>
               <p class="resultShipping">Shipping Cost: <span id="shippingCost"></span></p>
@@ -165,6 +165,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="../js/shipping.js"></script>
     <script src="../js/cart.js"></script>
 </body>
 </html>
